# gdsr

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md  seal.toml  zensical.toml
.claude/commands/: audit.md  commit-push-pr.md  next-issues.md  refactor.md  review.md  watch-merge.md  work-on-issue.md
.github/: CODE_OF_CONDUCT.md  PULL_REQUEST_TEMPLATE.md  codecov.yml  zizmor.yml
.github/ISSUE_TEMPLATE/: 1_bug_report.yml  2_question.yml  bug_report.yml  config.yml  feature_request.yml
.github/actions/setup-linux-deps/: action.yml
.github/workflows/: ci.yml  publish-docs.yml  publish-package.yml  release.yml
crates/gdsr/: Cargo.toml  README.md  main.gds
crates/gdsr-viewer/: Cargo.toml  README.md
crates/gdsr-viewer/src/: app.rs  colors.rs  drawable.rs  grid.rs  hierarchy.rs  loader.rs  main.rs  panels.rs  property_tests.rs  quick_pick.rs  recent.rs  ruler.rs  spatial.rs  state.rs  testutil.rs  viewport.rs
crates/gdsr-viewer/src/viewport/: bounds.rs  mod.rs
crates/gdsr/benches/: io.rs
crates/gdsr/benches/benches/: io.rs
crates/gdsr/examples/: sample.rs
crates/gdsr/src/: cell.rs  error.rs  lib.rs  library.rs  main.rs  property_tests.rs  stats.rs  test_fixtures.rs  traits.rs  types.rs  units.rs
crates/gdsr/src/cell/: io.rs  mod.rs
crates/gdsr/src/cell/snapshots/: gdsr__cell__tests__cell_get_elements-2.snap  gdsr__cell__tests__cell_get_elements-3.snap  gdsr__cell__tests__cell_get_elements.snap
crates/gdsr/src/config/: gds_file_types.rs
crates/gdsr/src/elements/: element.rs  gds_box.rs  mod.rs  node.rs  path.rs  polygon.rs  reference.rs  text.rs
crates/gdsr/src/elements/path/: io.rs  mod.rs
crates/gdsr/src/elements/path/path_type/: mod.rs
crates/gdsr/src/elements/polygon/: io.rs  mod.rs
crates/gdsr/src/elements/polygon/snapshots/: gdsr__elements__polygon__tests__polygon_display_empty.snap
crates/gdsr/src/elements/reference/: io.rs  mod.rs
crates/gdsr/src/elements/reference/instance/: mod.rs
crates/gdsr/src/elements/reference/snapshots/: gdsr__elements__reference__tests__reference_flatten.snap
crates/gdsr/src/elements/snapshots/: gdsr__elements__reference__tests__reference_flatten.snap
crates/gdsr/src/elements/text/: io.rs  mod.rs  utils.rs
crates/gdsr/src/elements/text/presentation/: mod.rs
crates/gdsr/src/geometry/: bounding_box.rs  mod.rs  path_expansion.rs  perimeter.rs
crates/gdsr/src/grid/: mod.rs
crates/gdsr/src/point/: mod.rs
crates/gdsr/src/property_tests/: arbitrary.rs  grid.rs  mod.rs  path.rs  polygon.rs  roundtrip.rs  transformation.rs  unit.rs  validation.rs
crates/gdsr/src/snapshots/: gdsr__cell__tests__cell_get_elements-2.snap  gdsr__cell__tests__cell_get_elements-3.snap  gdsr__cell__tests__cell_get_elements.snap
crates/gdsr/src/traits/: mod.rs
crates/gdsr/src/transformation/: mod.rs  reflection.rs  rotation.rs  scale.rs  translation.rs
crates/gdsr/src/utils/: gds_format.rs  geometry.rs  io.rs  mod.rs  svg.rs
crates/gdsr/tests/: read_write.rs
crates/gdsr_core/: Cargo.toml
crates/gdsr_core/src/: lib.rs  units.rs
crates/gdsr_core/src/cell/: io.rs  mod.rs
crates/gdsr_core/src/cell/snapshots/: gdsr_core__cell__tests__cell_get_elements-2.snap  gdsr_core__cell__tests__cell_get_elements-3.snap  gdsr_core__cell__tests__cell_get_elements.snap
crates/gdsr_core/src/config/: gds_file_types.rs
crates/gdsr_core/src/elements/: element.rs  mod.rs
crates/gdsr_core/src/elements/path/: io.rs  mod.rs
crates/gdsr_core/src/elements/path/path_type/: mod.rs
crates/gdsr_core/src/elements/polygon/: io.rs  mod.rs  utils.rs
crates/gdsr_core/src/elements/polygon/snapshots/: gdsr_core__elements__polygon__tests__polygon_display_empty.snap
crates/gdsr_core/src/elements/reference/: io.rs  mod.rs
crates/gdsr_core/src/elements/reference/instance/: mod.rs
crates/gdsr_core/src/elements/reference/snapshots/: gdsr_core__elements__reference__tests__reference_flatten.snap
crates/gdsr_core/src/elements/text/: general.rs  io.rs  mod.rs  utils.rs
crates/gdsr_core/src/elements/text/presentation/: mod.rs
crates/gdsr_core/src/grid/: mod.rs
crates/gdsr_core/src/point/: mod.rs
crates/gdsr_core/src/traits/: mod.rs
crates/gdsr_core/src/transformation/: mod.rs  reflection.rs  rotation.rs  scale.rs  translation.rs
crates/gdsr_core/src/utils/: gds_format.rs  general.rs  geometry.rs  io.rs
crates/gdsr_core/tests/: read_write.rs
docs/: requirements.txt  units.md
py-gdsr/: pyproject.toml
scripts/: prepare_docs.py
scripts/benchmark/: .gitignore  Cargo.toml  README.md  benchmark_comparison.sh  benchmark_gdsr.rs  benchmark_klayout.py  plot.py
scripts/benchmark/results/: .gitignore
src/: lib.rs  types.rs  units.rs
src/cell/: io.rs  mod.rs
src/cell/snapshots/: gdsr__cell__tests__cell_get_elements-2.snap  gdsr__cell__tests__cell_get_elements-3.snap  gdsr__cell__tests__cell_get_elements.snap
src/config/: gds_file_types.rs
src/elements/: element.rs
src/elements/path/: io.rs
src/elements/path/path_type/: mod.rs
src/elements/polygon/: io.rs  mod.rs
src/elements/polygon/snapshots/: gdsr__elements__polygon__tests__polygon_display_empty.snap
src/elements/reference/snapshots/: gdsr__elements__reference__tests__reference_flatten.snap
src/elements/text/: io.rs
src/geometry/: area.rs  is_point_inside.rs  is_point_on_edge.rs  mod.rs  round.rs
src/property_tests/: path.rs  point.rs  roundtrip.rs  text.rs
src/traits/: mod.rs
src/transformation/: reflection.rs  scale.rs
src/utils/: geometry.rs  io.rs  mod.rs
