[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
homepage = "https://github.com/MatthewMckee4/gdsr"
documentation = "https://github.com/MatthewMckee4/gdsr"
repository = "https://github.com/MatthewMckee4/gdsr"
authors = ["Matthew McKee <matthewmckee4@yahoo.co.uk>"]
license = "MIT"

[workspace.dependencies]
approx = "0.5"
bytemuck = "1.16.1"
chrono = "0.4.38"
gdsr_core = { path = "crates/gdsr_core" }
geo = "0.28"
insta = { version = "1.35.1" }
quickcheck = "1.0.3"
quickcheck_macros = "1"
rstest = "0.23.0"
tempfile = "3.8"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
correctness = { level = "warn", priority = -1 }
suspicious = { level = "warn", priority = -1 }
style = { level = "warn", priority = -1 }
complexity = { level = "warn", priority = -1 }
perf = { level = "warn", priority = -1 }

cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
missing_errors_doc = "allow"
float_cmp = "allow"
cast_possible_wrap = "allow"
similar_names = "allow"
missing_panics_doc = "allow"
cognitive_complexity = "allow"
