[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
rust-version = "1.85"
homepage = "https://github.com/MatthewMckee4/gdsr"
authors = ["Matthew McKee <matthewmckee4@yahoo.co.uk>"]
license = "MIT"

[workspace.dependencies]
gdsr = { path = "crates/gdsr" }

approx = "0.5"
bytemuck = "1.25.0"
chrono = "0.4.44"
earcutr = "0.4"
eframe = { version = "0.33.3", default-features = false, features = ["default_fonts", "glow", "x11", "wayland"] }
egui = "0.33.3"
emath = "0.33.3"
env_logger = "0.11"
insta = "1.46.3"
log = "0.4"
quickcheck = "1.1.0"
quickcheck_macros = "1"
rayon = "1"
rfd = "0.15"
rstest = "0.23.0"
tempfile = "3.26"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -2 }
# Allowed pedantic lints
char_lit_as_u8 = "allow"
collapsible_else_if = "allow"
collapsible_if = "allow"
implicit_hasher = "allow"
map_unwrap_or = "allow"
match_same_arms = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
module_name_repetitions = "allow"
must_use_candidate = "allow"
similar_names = "allow"
struct_excessive_bools = "allow"
too_many_arguments = "allow"
too_many_lines = "allow"
used_underscore_binding = "allow"
# Disallowed restriction lints
print_stdout = "warn"
print_stderr = "warn"
dbg_macro = "warn"
empty_drop = "warn"
empty_structs_with_brackets = "warn"
exit = "warn"
get_unwrap = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
if_not_else = "allow"
use_self = "warn"
cast_precision_loss = "allow"
cast_possible_truncation = "allow"
cast_sign_loss = "allow"
float_cmp = "allow"
cast_possible_wrap = "allow"
