[package]
name = "gdsr"
version = "0.0.1-alpha.0"
description = "A GDSII reader and writer for Rust"
readme = "README.md"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
bytemuck = { workspace = true }
chrono = { workspace = true }
geo = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
insta = { workspace = true }
quickcheck = { workspace = true }
quickcheck_macros = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
