[package]
name = "gdsr_core"
version = "0.0.0"

edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
authors = { workspace = true }
license = { workspace = true }

[dependencies]
bytemuck = { workspace = true }
chrono = { workspace = true }
geo = { workspace = true }

[dev-dependencies]
approx = { workspace = true }
rstest = { workspace = true }
tempfile = { workspace = true }

[lints]
workspace = true
